<resources>
    <string name="app_name">JailedTable</string>
    <string name="login_text">Login</string>
    <string name="login_nombre_comensal">Nombre Comensal</string>
    <string name="login_contrasena_comensal">Contraseña Comensal</string>
    <string name="login_boton_comensal">Enviar</string>
    <string name="login_nombre_hostelero">Nombre Hostelero</string>
    <string name="login_contrasena_hostelero">Contraseña Hostelero</string>
    <string name="login_boton_hostelero">Enviar</string>
    <string name="login_text_crearcuenta">¿Aún no tienes cuenta? pulsa aquí.</string>
    <string name="login_boton_crearcuenta">Crear Cuenta</string>
    <string name="crearcuenta1_texto">Crear una cuenta</string>
    <string name="crearcuenta1_eleccion">¿Qué tipo de cuenta desea?</string>
    <string name="crearcuenta1_dudas">¿Necesita ayuda para elegir?</string>
    <string name="crearcuenta1_checkbox1">Comensal</string>
    <string name="crearcuenta1_checkbox2">Hostelero</string>
    <string name="crearcuenta1_boton_crearcuenta2">Crear</string>
    <string name="crearcuenta1info_textocabecera">Información sobre cuentas</string>
    <string name="crearcuenta1info_comensal">Comensal:</string>
    <string name="crearcuenta1info_comensal_descrip">Un comensal, en la aplicación es entendido como un cliente de un restaurante.</string>
    <string name="crearcuenta1info_hostelero">Hostelero:</string>
    <string name="crearcuenta1info_hostelero_descrip">Un hostelero, en la aplicación es entendido como un propietario y/o gestor de un restaurante.</string>
    <string name="crearcomensal_txt">Creación de usuario (Comensal)</string>
    <string name="crearcomensal_nombre">Nombre (Máx 2 palabras)</string>
    <string name="crearcomensal_apellidos">Primer Apellido</string>
    <string name="crearcomensal_numtlf">Número de Teléfono</string>
    <string name="crearcomensal_contacto">Contacto</string>
    <string name="crearcomensal_comunidad">Comunidad</string>
    <string name="crearcomensal_provincia">Provincia</string>
    <string name="crearcomensal_localidad">Localidad</string>
    <string name="crearcomensal_password">Contraseña</string>
    <string name="crearcomensal_boton_enviar">Crear Comensal</string>
    <string name="crearhostelero_txt">Creación de usuario (Hostelero)</string>
    <string name="crearhostelero_nombre">Nombre (Máx 2 palabras)</string>
    <string name="crearhostelero_apellidos">Primer Apellido</string>
    <string name="crearhostelero_numtlf">Número de Teléfono</string>
    <string name="crearhostelero_contacto">Contacto</string>
    <string name="crearhostelero_password">Contraseña</string>
    <string name="crearhostelero_boton_enviar">Crear Hostelero</string>
    <string name="perfilcomensal_txtintro">Perfil (Comensal)</string>
    <string name="perfilcomensal_boton_alergenos">Alérgenos</string>
    <string name="perfilcomensal_boton_misreservas">Reservas</string>
    <string name="perfilcomensal_boton_restaurantes">Restaurantes</string>
    <string name="perfilcomensal_alergeno_cabecera2">Alérgenos</string>
    <string name="perfilcomensal_alergeno1">Gluten</string>
    <string name="perfilcomensal_alergeno2">Crustáceos</string>
    <string name="perfilcomensal_alergeno3">Huevos</string>
    <string name="perfilcomensal_alergeno4">Pescado</string>
    <string name="perfilcomensal_alergeno5">Cacahuetes</string>
    <string name="perfilcomensal_alergeno6">Soja</string>
    <string name="perfilcomensal_alergeno7">Lácteos</string>
    <string name="perfilcomensal_alergeno8">Moluscos</string>
    <string name="perfilcomensal_alergeno9">Apio</string>
    <string name="perfilcomensal_alergeno10">Mostaza</string>
    <string name="perfilcomensal_alergeno11">Sésamo</string>
    <string name="perfilcomensal_alergeno12">Sulfitos</string>
    <string name="perfilcomensal_alergeno13">Altramuces</string>
    <string name="perfilcomensal_alergeno14">Frutos Cáscara</string>
    <string name="perfilcomensal_alergeno_botoncrear">Crear</string>
    <string name="perfilcomensal_alergeno_botonactualizar">Actualizar</string>
    <string name="perfilcomensal_info_cabecera">Información</string>
    <string name="perfilcomensal_info_superfil">Su Perfil: Encontrará los datos que facilitó durante la creación de su perfil en la vista anterior, aunque esos datos ya no podrán ser alterados.</string>
    <string name="perfilcomensal_info_sualergenos">Sus Alérgenos: En el botón Alérgenos de su perfil podrá tener acceso a sus alérgenos, en el caso de ser la primera ocasión que hace uso de esa opción podrá seleccionar cuantos alérgenos necesite los cuales serán enviados y guardados. Tras ello, en las posteriores ocasiones que entre en esta opción se le mostrarán los alérgenos que seleccionó y podrá modificarlos.</string>
    <string name="perfilcomensal_info_misreservas">Sus Reservas: En el botón Reservas de su perfil podrá encontrar sus reservas realizadas.</string>
    <string name="perfilcomensal_info_losrestaurantes">Restaurantes: En el botón Restaurantes podrá realizar las búsquedas que necesite para encontrar los diferentes restaurantes que se encuentran registrados en la plataforma, una vez seleccionado un restaurante tras la búsqueda podrá realizar las reservas que considere.</string>
    <string name="perfilcomensal_reservas_cabecera">Sus Reservas</string>
    <string name="perfilcomensal_rest_busquedadefect">Buscar:</string>
    <string name="perfilcomensal_rest_cabecera">Restaurantes registrados</string>
    <string name="perfilcomensal_rest_cabecera2">Para saber más sobre un restaurante, introduzca: </string>
    <string name="perfilcomensal_rest_introduzca">Número del Restaurante.</string>
    <string name="perfilcomensal_rest_boton">Buscar</string>
    <string name="perfilcomensal_restinfo_mesas">Mesas del Restaurante:</string>
    <string name="perfilcomensal_restinfo_nummesa">Número de la mesa:</string>
    <string name="perfilcomensal_restinfo_botonreservar">Reservar</string>
    <string name="perfilcomensal_restinfo_botoninfomenus">Cartar</string>
    <string name="perfilcomensal_restinfo_quierereservar1">¿Desea realizar una reserva?</string>
    <string name="perfilcomensal_restinfo_quierereservar2">Señale la fecha en el calendario e inserte el número de la mesa.</string>
    <string name="perfilcomensal_restinfomenus_cabecera1">Menús disponibles</string>
    <string name="perfilcomensal_restinfomenus_cabecera2">Inserte el número del menú que desee, para ver sus platos:</string>
    <string name="perfilcomensal_restinfomenus_textoeditable">Número de Menú</string>
    <string name="perfilcomensal_restinfomenus_boton">Introducir</string>
    <string name="perfilcomensal_restinfomenusplatos_cabecera1">Platos disponibles para el menú:</string>
    <string name="perfilcomensal_restinfomenusplatos_cabecera2">Alérgenos asociados al menú elegido:</string>
    <string name="perfilhostelero_perfil_cabecera">Perfil (Hostelero)</string>
    <string name="perfilhostelero_boton_crearrestaurantes">Crear Restaurante</string>
    <string name="perfilhostelero_boton_misrestaurantes">Mis Restaurantes</string>
    <string name="perfilhostelero_boton_informacion">Información</string>
    <string name="perfilhost_info_superfil">Su Perfil: Encontrará los datos que facilitó durante la creación de su perfil en la vista anterior, aunque esos datos ya no podrán ser alterados.</string>
    <string name="perfilhost_info_crearrest">Crear Restaurantes: Aquí podrá crear los restaurantes que necesite para su posterior gestión y configuración, introduciendo para ello toda la información necesaria. Aunque, debe ser cauto a la hora de introducir los datos pues no podrá modificarlos para ese restaurante.</string>
    <string name="perfilhost_info_misrest">Mis Restaurantes: Aquí es donde tras crear un restaurante podrá gestionar y configurar cada uno por separado, esto incluye todo lo necesario para su gestión (Creación de menús, platos, valoración de comensales, reservas, etc...)</string>
    <string name="perfilhost_crearrest_head">Crear un Restaurante</string>
    <string name="perfilhost_crearrest_pedirnombre">Nombre (Máx 2 palabras)</string>
    <string name="perfilhost_crearrest_pedircomunidad">Comunidad</string>
    <string name="perfilhost_crearrest_pedirprovincia">Provincia</string>
    <string name="perfilhost_crearrest_pedirlocalidad">Localidad</string>
    <string name="perfilhost_crearrest_pedirnumtlf">Número de Teléfono</string>
    <string name="perfilhost_crearrest_botoncrear">Crear Restaurante</string>
    <string name="perfilhost_misrestaurantes_header">Mis Restaurantes</string>
    <string name="perfilhost_misrestaurantes_header2">Para saber más sobre uno de sus restaurantes, introduzca:</string>
    <string name="perfilhost_misrestaurantes_textviewNumRest">Número del Restaurante</string>
    <string name="perfilhost_misrestaurantes_BotonIntroducir">Buscar</string>
    <string name="perfilhost_mirestaurante_botonCrearMenu">Crear Menú</string>
    <string name="perfilhost_mirestaurante_botonMisMenus">Mis Menús</string>
    <string name="perfilhost_mirestaurante_botonCrearMesa">Crear Mesa</string>
    <string name="perfilhost_mirestaurante_botonMisMesas">Mis Mesas</string>
    <string name="perfilhost_mirestaurante_botonPoliticas">Políticas</string>
    <string name="perfilhost_mirestaurante_politicas_checkbox1">Habilitar Políticas</string>
    <string name="perfilhost_mirestaurante_politicas_checkbox2">Permitir Usuarios con Valoración Negativa</string>
    <string name="perfilhost_mirestaurante_politicas_checkbox3">Habilitar Políticas</string>
    <string name="perfilhost_mirestaurante_politicas_checkbox4">Permitir Usuarios con Valoración Negativa</string>
    <string name="perfilhost_mirestaurante_politicas_botonCrear">Crear</string>
    <string name="perfilhost_mirestaurante_politicas_botonUpdate">Actualizar</string>
    <string name="perfilhost_mirestaurante_politicas_cabecera1">Mis Políticas</string>
    <string name="perfilhost_mirestaurante_politicas_cabecera2">Creación de Políticas:</string>
    <string name="perfilhost_mirestaurante_politicas_cabecera3">Actualización de Políticas:</string>
    <string name="perfilhost_mirestaurante_creandomenu_cabecera1">Crear Menú</string>
    <string name="perfilhost_mirestaurante_creandomenu_cabecera2">Introduzca el nombre del menú, luego podrá añadir platos a este en la opción "Mis Menús".</string>
    <string name="perfilhost_mirestaurante_creandomenu_editextnombre">Nombre del Menú</string>
    <string name="perfilhost_mirestaurante_creandomenu_botoncrear">Crear Menu</string>
    <string name="perfilhost_mirestaurante_creandomesa_cabecera1">Crear Mesa</string>
    <string name="perfilhost_mirestaurante_creandomesa_etcostenoshow">Coste por No-Show</string>
    <string name="perfilhost_mirestaurante_creandomesa_etnummesa">Número de la mesa</string>
    <string name="perfilhost_mirestaurante_creandomesa_etnumsillas">Número de sillas</string>
    <string name="perfilhost_mirestaurante_creandomesa_botoncrear">Crear Mesa</string>
    <string name="perfilhost_mirestaurante_infomenu_header1">Menús del restaurante</string>
    <string name="perfilhost_mirestaurante_infomenu_header2">Inserte el número del menú que desee, para ver sus platos:</string>
    <string name="perfilhost_mirestaurante_infomenu_etnummenu">Número del Menú</string>
    <string name="perfilhost_mirestaurante_infomenu_botonmenu">Introducir</string>
    <string name="perfilhost_mirestaurante_infomesas_header1">Mesas del Restaurante</string>
    <string name="perfilhost_mirestaurante_infomesas_etnummesa">Número de la Mesa</string>
    <string name="perfilhost_mirestaurante_infomesas_header2">Inserte el número de la mesa que desee, para ver sus reservas:</string>
    <string name="perfilhost_mirestaurante_infomesareservas_header1">Información de la mesa:</string>
    <string name="perfilhost_mirestaurante_infomesareservas_header2">Reservas asociadas a la mesa:</string>
</resources>