<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/perfil_host_mirest_politic_cb1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_checkbox1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <CheckBox
        android:id="@+id/perfil_host_mirest_politic_cb2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_checkbox2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/perfil_host_mirest_politic_enviar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_botonCrear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <CheckBox
        android:id="@+id/perfil_host_mirest_politic_cb3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_checkbox3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <CheckBox
        android:id="@+id/perfil_host_mirest_politic_cb4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_checkbox4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/perfil_host_mirest_politic_enviar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_botonUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/perfil_host_mirest_politic_cabecera2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_cabecera2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/perfil_host_mirest_politic_cabecera3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfilhost_mirestaurante_politicas_cabecera3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>